sorted out emacs errors

--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,7 @@
 #+TITLE: Todo
-* [0/3] create separate installation frameworks
-** TODO emacs:
+* [1/3] create separate installation frameworks
+** DONE emacs:
+CLOSED: [2020-07-19 Sun 06:19]
    - exwm
    - firefox
    ... that's about it
@@ -20,6 +21,10 @@ ensure capslock -> mod/esc works
 allow tap-to-click on trackpad
 * TODO bluetooth
 ensure bluetoothctl is configured
-definitely still have to manually pair everything though : (
-* TODO networking
+pair existing devices
+* DONE networking
+CLOSED: [2020-07-19 Sun 06:19]
 ensure the device can properly connect to local network
+* TODO Make vim config identical to emacs config
+vim should have a subset of the emacs commands and features
+but it should have the same keybindings for the same operations, generally
