--- a/README.org
+++ b/README.org
@@ -9,6 +9,7 @@ chown jake:users /etc/nixos
 git clone --recurse-submodules https://github.com/jakechv/nix-cfg /etc/nixos
 sudo nix-channel --add https://github.com/rycee/home-manager/archive/master.tar.gz home-manager
 sudo nix-channel --add https://github.com/NixOS/nixos-hardware/archive/master.tar.gz nixos-hardware
+sudo nix-channel --add https://github.com/musnix/musnix/archive/master.tar.gz musnix
 sudo nix-channel --update
 
 ln -s /etc/nixos ~/.config/nixpkgs
