--- a/TODO.org
+++ b/TODO.org
@@ -28,4 +28,4 @@ can it be done ? ;_;
 would be nice to have a swedish keybaord
 * try different window managers
 * configure password store
-lol
+lol how do i do this
