Update nordic theme

--- a/modules/themes/nordic/README.org
+++ b/modules/themes/nordic/README.org
@@ -2,4 +2,8 @@
 #+AUTHOR: Jacob Chvatal
 #+DATE:   December 28, 2020
 
-The classic nordic theme. It probably isn't complete if you're readin this.
+The classic nordic theme.
+
+You can do a few more things to improve the theme experience:
+- Get the DuckDuckGo theme (password: "NordDarkTheme")
+- Configure the Emacs theme (Using my or your own emacs config - highly recommend Doom!)
